background color changed

--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
 TransitGateway Page
 </Title>
 </Head>
-<Body bgcolor="Yellow">
+<Body bgcolor="Green">
 <b>A. AWS TransitGateway!!!</b><br>
 <b>B. Terraform Tutorial on TransitGateway.. </b><br>
 <br>
